digitalocean_k8s_configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-world-server
  name: hello-world-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-server
  strategy: {}
  template:
    metadata:
      labels:
        app: hello-world-server
    spec:
      containers:
        - image: yashpandit4u/golang-echo-server:0.3
          name: golang-echo-server
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "200m"
status: {}
