digitalocean_k8s_configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-world-server
  name: hello-world-server
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: hello-world-server
status:
  loadBalancer: {}
