digitalocean_k8s_configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  labels:
    app: hello-world-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ""
      http:
        paths:
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: hello-world-server
                port:
                  number: 80
          - path: /daemon
            pathType: Prefix
            backend:
              service:
                name: hello-world-daemonset-service
                port:
                  number: 80
